--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <style>
         #contaner {
             background-color: rgb(rgb(143, 251, 255), green, blue);
-            position: fixed;
+            position: absolute;
             background-image: url(https://images.yourstory.com/cs/4/8e7cc4102d6c11e9aa979329348d4c3e/LGBTQ-1593256910470.png);
-            max-width: 100%;
-            max-height: 100%;
-            padding: 200px;
+
+            padding: auto;
+            display: block;
         }
 
         .link {
@@ -47,7 +47,7 @@
     <div id="contaner">
 
         <div id="infos">
-            <h1> Phiếu khảo sát về cộng đồng giới tính LGBTQ+</h1>
+            <h1> Phiếu khảo sát về cộng đồng LGBTQ+</h1>
             <p style="text-align: center;"> Kính chào Quý Thầy/Cô, các Cô/Chú và các em học sinh!
                 Chúng em sẽ sử dụng thông tin do Thầy/Cô, các
                 bạn học sinh và các Cô/Chú cung cấp trong bảng hỏi và sẽ phân tích dữ liệu
