--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
             background-color: rgb(rgb(143, 251, 255), green, blue);
             position: absolute;
             background-image: url(https://images.yourstory.com/cs/4/8e7cc4102d6c11e9aa979329348d4c3e/LGBTQ-1593256910470.png);
-
-            padding: auto;
+            padding: 100px;
             display: block;
+            max-width: 100%;
+            max-height: 100%;
+
         }
 
         .link {
@@ -25,7 +27,7 @@
             text-decoration: none;
             text-align: center;
             color: black;
-            padding: 10px;
+            padding: 2%;
         }
 
         .link:hover {
@@ -37,8 +39,10 @@
             border-radius: 10px;
             display: block;
             justify-content: center;
-            min-height: 350px;
+            min-height: 300px;
+            min-width: 200px;
             text-align: center;
+
         }
     </style>
 </head>
