--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
             background-color: rgb(rgb(143, 251, 255), green, blue);
             position: absolute;
             background-image: url(https://images.yourstory.com/cs/4/8e7cc4102d6c11e9aa979329348d4c3e/LGBTQ-1593256910470.png);
-            padding: 100px;
-            display: block;
+            padding: 200px;
+            display: flex;
+            justify-content: center;
             max-width: 100%;
             max-height: 100%;
 
@@ -27,7 +28,7 @@
             text-decoration: none;
             text-align: center;
             color: black;
-            padding: 2%;
+            padding: 10px;
         }
 
         .link:hover {
@@ -39,10 +40,16 @@
             border-radius: 10px;
             display: block;
             justify-content: center;
-            min-height: 300px;
-            min-width: 200px;
+            max-height: 20%;
+            max-width: 50%;
             text-align: center;
 
+        }
+
+        #ne {
+            min-width: 50px;
+            min-height: 50px;
+            padding: 1px;
         }
     </style>
 </head>
@@ -61,10 +68,11 @@
                     được
                     giữ bí mật tuyệt đối và chỉ sử dụng cho mục đích nghiên cứu.</i> Trân trọng cảm ơn!</p>
 
-
-            <h1 style="color:black;">Chọn đối tượng cần khảo sát</h1>
-            <a class="link" href="18-.html">Dành cho các bạn học sinh</a>
-            <a class="link" href="18+.html">Dành cho các Cô/Chú</a>
+            <div id="ne">
+                <h1 style="color:black;">Chọn đối tượng cần khảo sát</h1>
+                <a class="link" href="18-.html">Dành cho các bạn học sinh</a>
+                <a class="link" href="18+.html">Dành cho các Cô/Chú</a>
+            </div>
         </div>
     </div>
 </body>
