--- a/18+.html
+++ b/18+.html
@@ -8,7 +8,13 @@
     <title>khaosat</title>
 </head>
 <style>
-
+.content{
+    display: flex;
+    justify-content: center;
+    max-width: auto;
+    max-height: 100%;
+    
+}
 </style>
 
 <body>
