--- a/18-.html
+++ b/18-.html
@@ -6,10 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>khaosat</title>
+    <style>
+        .content {
+            display: flex;
+            justify-content: center;
+            max-width: auto;
+            max-height: 100%;
+
+        }
+    </style>
 </head>
 
 <body>
-    <iframe
+    <iframe class="content"
         src="https://docs.google.com/forms/d/e/1FAIpQLSdEQUTTh_bjVCzVK6VtkJFZuOc10Mj835FdbX7a58ePxv9Tug/viewform?embedded=true"
         width="1310" height="5014" frameborder="0" marginheight="0" marginwidth="0">Đang tải…</iframe>
 </body>
