--- a/index.html
+++ b/index.html
@@ -11,24 +11,26 @@
             background-color: rgb(rgb(143, 251, 255), green, blue);
             position: absolute;
             background-image: url(https://images.yourstory.com/cs/4/8e7cc4102d6c11e9aa979329348d4c3e/LGBTQ-1593256910470.png);
-            padding: 200px;
-            display: flex;
+            padding: 100px;
+            margin: 10px;
+            display: block;
             justify-content: center;
-            max-width: 100%;
-            max-height: 100%;
+            min-width: 50%;
+            min-height: 100%;
 
         }
 
         .link {
             border-radius: 10px;
-            box-sizing: border-box;
-            min-height: 50px;
-            min-width: 50px;
+
+            height: 50px;
+            width: 50px;
             background-color: white;
             text-decoration: none;
             text-align: center;
             color: black;
-            padding: 10px;
+            padding: 1%;
+
         }
 
         .link:hover {
@@ -38,18 +40,12 @@
         #infos {
             background-color: lightblue;
             border-radius: 10px;
-            display: block;
-            justify-content: center;
-            max-height: 20%;
-            max-width: 50%;
+            display: inline-block;
+            min-height: 100px;
+            min-width: 50%;
+            padding-bottom: 50px;
             text-align: center;
 
-        }
-
-        #ne {
-            min-width: 50px;
-            min-height: 50px;
-            padding: 1px;
         }
     </style>
 </head>
@@ -67,11 +63,13 @@
                 gia vào cuộc khảo sát của nhóm nghiên cứu. <i> Nhóm nghiên cứu xin cam kết toàn bộ thông tin trả lời sẽ
                     được
                     giữ bí mật tuyệt đối và chỉ sử dụng cho mục đích nghiên cứu.</i> Trân trọng cảm ơn!</p>
+            <h1 style="color:black;">Chọn đối tượng cần khảo sát</h1>
+            <div style="padding: auto;">
 
-            <div id="ne">
-                <h1 style="color:black;">Chọn đối tượng cần khảo sát</h1>
-                <a class="link" href="18-.html">Dành cho các bạn học sinh</a>
-                <a class="link" href="18+.html">Dành cho các Cô/Chú</a>
+                <a class="link" href="18-.html">Dưới 18 tuổi</a>
+                <a class="link" href="18+.html">Trên 18 tuổi</a>
+
+
             </div>
         </div>
     </div>
