--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="bg-text">
         <div id="infos">
             <h1> Phiếu khảo sát về cộng đồng LGBTQ+</h1>
-            <p style="text-align: center;"> Kính chào Quý Thầy/Cô, các Cô/Chú và các em học sinh!
+            <p style="text-align: center;"> Kính chào Quý Thầy/Cô, các Cô/Chú và các bạn học sinh!
                 Chúng em sẽ sử dụng thông tin do Thầy/Cô, các
                 bạn học sinh và các Cô/Chú cung cấp trong bảng hỏi và sẽ phân tích dữ liệu
                 liên quan trong dự án nghiên cứu. Bảng hỏi này trình bày bằng tiếng Việt và cần khoảng 10 đến 15 phút để
