--- a/18+.html
+++ b/18+.html
@@ -20,7 +20,7 @@
 <body>
     <div class="content"><iframe
             src="https://docs.google.com/forms/d/e/1FAIpQLSf9JRMhJXZo8-093eLapmdUtGISm2sxtHcpcQsnjLrqvzv9QA/viewform?embedded=true"
-            width="1310" height="5014" frameborder="0" marginheight="0" marginwidth="0">Đang tải…</iframe>
+            width="1310" height="670px" frameborder="0" marginheight="0" marginwidth="0">Đang tải…</iframe>
     </div>
 </body>
 
