--- a/18-.html
+++ b/18-.html
@@ -12,7 +12,7 @@
             justify-content: center;
             max-width: auto;
             max-height: 100%;
-
+            position: absolute;
         }
     </style>
 </head>
@@ -20,7 +20,7 @@
 <body>
     <div class="content"> <iframe
             src="https://docs.google.com/forms/d/e/1FAIpQLSdEQUTTh_bjVCzVK6VtkJFZuOc10Mj835FdbX7a58ePxv9Tug/viewform?embedded=true"
-            width="1310" height="5014" frameborder="0" marginheight="0" marginwidth="0">Đang tải…</iframe></div>
+            width="1310" height="670px" frameborder="0" marginheight="0" marginwidth="0">Đang tải…</iframe></div>
 </body>
 
 </html>
